# gsrt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compare_chpt.py  environment.yaml  icosa.py  mem.py  nbs_imrender.py  nbs_profile_method.py  nbs_run.sh  nbs_train.sh  nbs_train_gsplat.py  nbs_train_method.py  nbs_trainer.py  nbs_viewer.py  run.py  run.sh  setup.sh  tab.py  tabheat.py  test.cpp  test.py  test_bwd.py  test_bwd_lego.py  test_bwd_sc.py  test_bwd_scene.py  test_custom.py  training.py
configs/: config.yaml
configs/experiment/: gs.yaml  lego.yaml  mipnerf.yaml  zipnerf.yaml  zipnerf_fisheye.yaml
configs/mode/: eval.yaml  gradcheck.yaml  test.yaml  train.yaml
configs/parameters/: 3dgrt.yaml  3dgs.yaml
configs/run/: exp.yaml
early_test_scripts/: cameras.py  test.py  test_bwd_lego.py
extension/: __init__.py
method/: __init__.py  cam_grut.py  checkpoint.py  initialization.py  model.py  patch_cameras.py  trace_function.py  training.py
method/densif_strategy/: __init__.py  base.py  threedgrt.py
method_gsrt/: gsrt_config.py  gsrt_model.py
nbs-3dgs-fs/: run.py  setup.sh  view.py
nbs-3dgs-fs/fisheye_gs_rasterizer/build_ang/temp.linux-x86_64-cpython-38/: .ninja_deps  .ninja_log  build.ninja
nbs-3dgs-fs/fisheye_gs_rasterizer/cuda_rasterizer/: auxiliary.h  forward.cu
nbs-3dgs-fs/method/: fsgs_method.py  fsgs_method_spec.py
nbs-3dgs-fs/scene/: gaussian_model.py
nbs_method/: gsrt_method.py  gsrt_method_bad_densif.py  gsrt_method_spec.py
nerfbaselines/: cameras.py  evaluation.py
nerfbaselines/methods/: gaussian_splatting.py
nerfbaselines/viewer/static/: viewer.js
nerfbaselines/viewer/templates/: index.html
scene/: gaussian_model.py
src/: gaussians_tracer.cpp  gaussians_tracer.cu  gaussians_tracer.h  gs_tracer_bwd.cu  gs_tracer_bwd_grut.cu  gs_tracer_sorting.cu  gs_tracer_sorting_2d.cu  gs_tracer_sorting_2d_queue.cu  optix_types.h  primitives.cu  primitives.h  py_binding.cpp  referenceOptix.cu  tracer.h  tracer_cu.cu  tracer_cu.cuh  tracer_custom.cpp  tracer_custom.h  types.h
src/experimental/: kd_tracer.cpp
src/experimental/host/: traverser.cpp
src/kd_tracer/: kd_tracer.cpp  kd_tracer.h  structure.cpp  structure.h
src/kd_tracer/cuda/: traverser.cu  traverser.h
src/kd_tracer/host/: builder.cpp  builder.h  traverser.h
src/optix_tracer/: as.cpp  as.h  optix_tracer.cpp  optix_tracer.h  optix_types.h  pipeline.cpp  pipeline.h
src/optix_tracer/kernels/: gaussians_tracer.cu  gs_tracer_bwd.cu  gs_tracer_bwd_grut.cu  gs_tracer_chit_2d.cu  gs_tracer_sorting.cu  gs_tracer_sorting_2d.cu  gs_tracer_sorting_2d_merge.cu  gs_tracer_sorting_2d_queue.cu  referenceOptix.cu  referenceOptix_orig.cu  tracer-fast.cu  tracer-roll.cu  tracer.cu
src/rendering/: bwd.cuh  fwd.cuh
src/utils/: Matrix.h  auxiliary.h  exception.h  exception_cuda.h  geom.h  gs_tracing.h  gsrt_util.h  primitives.cu  primitives.h  vec_math.h
utils/: general_utils.py
